Update SecurityConfiguration.java